# ros2_dev_ws

./: .bandit  .flake8  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  run_linting.sh  test_for_friend.sh
.github/workflows/: repo_ci.yml
src/: .flake8  .pre-commit-config.yaml  .pylintrc  requirements-dev.txt  ros_entrypoint.sh  run_linting.sh
src/custom_interface/: CMakeLists.txt  package.xml
src/custom_interface/srv/: PlanTrajectory.srv
src/ros2_traj_pkg/: package.xml  setup.cfg  setup.py
src/ros2_traj_pkg/config/: publisher_params_manager.yaml  subscriber_params_manager.yaml  trajectory_params.yaml  velocity_filter_params.yaml
src/ros2_traj_pkg/launch/: complete_system_launch.py  trajectory_launch.py  velocity_filter_launch.py
src/ros2_traj_pkg/ros2_traj_pkg/: __init__.py  filtervelocity_subscriber_node.py  trajectory_planner_node.py
src/ros2_traj_pkg/test/: test_flake8.py  test_nodes_comms_and_props.py  test_pep257.py  test_trajectory_nodes.py
