<?xml version="1.0"?>
<package format="3">
  <name>custom_interface</name>
  <version>0.0.0</version>
  <description>Custom service definition used in ros2_Traj_pkg</description>
  <maintainer email="venugopal.reddy.kollan@example.com">venugopal reddy kollan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
