<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_traj_pkg</name>
  <version>0.0.0</version>
  <description>Ros2 node for trajectory planning with polynomial interpolation</description>
  <maintainer email="venugopal.reddy.kollan@gmail.com">venugopal reddy kollan</maintainer>
  <license>Apache License 2.0</license>

  <!-- Parameter Dependencies -->
  <depend>generate_parameter_library</depend>
  <depend>generate_parameter_library_py</depend>

  <!-- Core Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>custom_interface</depend>

  <!-- Runtime Dependencies -->
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
